<resources>
	<string name="app_name">BigBrother</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="action_settings">Settings</string>
	<string name="generic_firstname">John</string>
	<string name="generic_lastname">Doe</string>
	<string name="generic_date">Septembre 14 2017</string>
	<string name="generic_time">14:30</string>
	<string name="generic_email">JohnDoe@gmail.com</string>
	<string name="error_not_implemented">Not implemented</string>
	<string name="error_not_available">This method is not available on your device</string>
	<string name="error_generic">An error occurred</string>
	<string name="hasIcon">hasIcon</string>
	<string name="_0">0</string>
	<string name="first_name_field">Firstname</string>
	<string name="last_name_field">Lastname</string>
	<string name="email_field">Email</string>
	<string name="email_field_secondary">Email :</string>
	<string name="icon_field">Icon :</string>
	<string name="date_field">Birthdate :</string>
	<string name="action_validate">Validate</string>
	<string name="error_name_already_used">Name \\\"%s\\\" already used</string>
	<string name="error_no_path_found">No path found.</string>
	<string name="error_empty_name">Firstname cannot be empty</string>
	<string name="error_empty_title">Title cannot be empty</string>
	<string name="date_picker">Set</string>
	<string name="edit">title_edit</string>
	<string name="title_activity_maps">Map</string>
	<string name="date">Date</string>
	<string name="generic_title">A title</string>
	<string name="end_date_field">Ends :</string>
	<string name="start_date_field">Starts :</string>
	<string name="title_field">Title</string>
	<string name="select_friends">Select friends</string>
	<string name="action_cancel">Cancel</string>
	<string name="location">Location</string>
	<string name="dash">-</string>
	<string name="action_sort">Sort</string>
	<string name="pick_location">Pick location</string>
	<string name="action_refresh">Refresh</string>
	<string name="title_activity_settings">Settings</string>

	<!-- Strings related to Settings -->

	<!-- Example General settings -->
	<string name="pref_header_general">General</string>

	<string name="pref_title_social_recommendations">Enable social recommendations</string>
	<string name="pref_description_social_recommendations">Recommendations for people to contact
		based on your message history
	</string>

	<string name="pref_title_display_name">Display name</string>
	<string name="pref_default_display_name">John Smith</string>

	<string name="pref_title_add_friends_to_messages">Add friends to messages</string>
	<string-array name="pref_example_list_titles">
		<item>Always</item>
		<item>When possible</item>
		<item>Never</item>
	</string-array>
	<string-array name="pref_example_list_values">
		<item>1</item>
		<item>0</item>
		<item>-1</item>
	</string-array>

	<!-- Example settings for Data & Sync -->
	<string name="pref_header_data_sync">Data &amp; sync</string>

	<string name="pref_title_sync_frequency">Sync frequency</string>
	<string-array name="pref_sync_frequency_titles">
		<item>15 minutes</item>
		<item>30 minutes</item>
		<item>1 hour</item>
		<item>3 hours</item>
		<item>6 hours</item>
		<item>Never</item>
	</string-array>
	<string-array name="pref_sync_frequency_values">
		<item>15</item>
		<item>30</item>
		<item>60</item>
		<item>180</item>
		<item>360</item>
		<item>-1</item>
	</string-array>

	<string-array name="list_preference_entries">
		<item>Entry 1</item>
		<item>Entry 2</item>
		<item>Entry 3</item>
	</string-array>

	<string-array name="list_preference_entry_values">
		<item>1</item>
		<item>2</item>
		<item>3</item>
	</string-array>

	<string-array name="multi_select_list_preference_default_value"/>

	<string name="pref_title_system_sync_settings">System sync settings</string>

	<!-- Example settings for Notifications -->
	<string name="pref_header_notifications">Notifications</string>

	<string name="pref_title_new_message_notifications">New message notifications</string>

	<string name="pref_title_ringtone">Ringtone</string>
	<string name="pref_ringtone_silent">Silent</string>

	<string name="pref_title_vibrate">Vibrate</string>
	<string name="error_invalid_date">Meeting cannot end before it starts</string>
</resources>
