<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="com.poncholay.bigbrother.activities.EditFriendActivity"
	tools:showIn="@layout/app_bar_edit_friend">

	<com.wrapp.floatlabelededittext.FloatLabeledEditText
		android:id="@+id/first_name_parent"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<EditText
			android:id="@+id/first_name_field"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/first_name_field"
			android:textColorHint="@color/hintGray" />
	</com.wrapp.floatlabelededittext.FloatLabeledEditText>

	<com.wrapp.floatlabelededittext.FloatLabeledEditText
		android:id="@+id/last_name_parent"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/first_name_parent">

		<EditText
			android:id="@+id/last_name_field"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/last_name_field"
			android:textColorHint="@color/hintGray" />
	</com.wrapp.floatlabelededittext.FloatLabeledEditText>


	<com.wrapp.floatlabelededittext.FloatLabeledEditText
		android:id="@+id/email_parent"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/last_name_parent">

		<EditText
			android:id="@+id/email_field"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/email_field"
			android:textColorHint="@color/hintGray"
			android:inputType="textEmailAddress"/>
	</com.wrapp.floatlabelededittext.FloatLabeledEditText>

	<RelativeLayout
		android:id="@+id/date_parent"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/email_parent"
		android:layout_marginTop="@dimen/activity_vertical_margin">

		<TextView
			android:id="@+id/date_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingStart="6dp"
			android:layout_centerVertical="true"
			android:text="@string/date_field"
			android:textColor="@color/hintGray"
			android:fontFamily="sans-serif"
			android:textSize="18sp" />

		<TextView
			android:id="@+id/date_field"
			android:layout_toEndOf="@id/date_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/activity_horizontal_margin"
			android:layout_centerVertical="true"
			android:textColor="@color/hintGray"
			android:fontFamily="sans-serif"
			android:textSize="18sp" />

		<android.support.v7.widget.AppCompatButton
			android:id="@+id/date_button"
			android:layout_alignParentEnd="true"
			android:layout_centerVertical="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/date_picker"
			android:minWidth="0dp"/>

	</RelativeLayout>

	<LinearLayout
		android:id="@+id/icon_parent"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/date_parent">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_marginEnd="12dp"
			android:paddingStart="6dp"
			android:gravity="center_vertical"
			android:text="@string/icon_field"
			android:textColor="@color/hintGray"
			android:fontFamily="sans-serif"
			android:textSize="18sp" />

		<com.mikhaellopez.circularimageview.CircularImageView
			android:id="@+id/icon_field"
			android:layout_width="wrap_content"
			android:layout_height="45sp"
			android:layout_margin="@dimen/activity_horizontal_margin" />
	</LinearLayout>

</RelativeLayout>
