<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="com.poncholay.bigbrother.activities.EditMeetingActivity"
	tools:showIn="@layout/app_bar_edit_meeting">

	<LinearLayout
		android:id="@+id/hint"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_gravity="center_vertical"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent">

		<com.wrapp.floatlabelededittext.FloatLabeledEditText
			android:id="@+id/title_parent"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/title_field"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/title_field"
				android:textColorHint="@color/hintGray" />
		</com.wrapp.floatlabelededittext.FloatLabeledEditText>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<LinearLayout
				android:layout_width="0dp"
				android:layout_weight="25"
				android:layout_height="match_parent"
				android:orientation="vertical">
				<TextView
					android:id="@+id/start_date_label"
					android:layout_width="wrap_content"
					android:layout_height="0dp"
					android:layout_weight="50"
					android:paddingStart="6dp"
					android:gravity="center_vertical"
					android:text="@string/start_date_field"
					android:textColor="@color/hintGray"
					android:fontFamily="sans-serif"
					android:textSize="18sp"/>

				<TextView
					android:id="@+id/end_date_label"
					android:layout_width="wrap_content"
					android:layout_height="0dp"
					android:layout_weight="50"
					android:paddingStart="6dp"
					android:gravity="center_vertical"
					android:text="@string/end_date_field"
					android:textColor="@color/hintGray"
					android:fontFamily="sans-serif"
					android:textSize="18sp"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/values"
				android:layout_width="0dp"
				android:layout_weight="75"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				<android.support.constraint.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="50">
					<TextView
						android:id="@+id/start_date_field"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:layout_marginStart="@dimen/small_padding"
						android:textColor="@color/hintGray"
						android:fontFamily="sans-serif"
						android:textSize="18sp"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintBottom_toBottomOf="parent"/>

					<android.support.v7.widget.AppCompatButton
						android:id="@+id/start_date_button"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/date_picker"
						android:minWidth="0dp"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintBottom_toBottomOf="parent"/>
				</android.support.constraint.ConstraintLayout>

				<android.support.constraint.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="50">
					<TextView
						android:id="@+id/end_date_field"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="@dimen/small_padding"
						android:textColor="@color/hintGray"
						android:fontFamily="sans-serif"
						android:textSize="18sp"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintBottom_toBottomOf="parent"/>

					<android.support.v7.widget.AppCompatButton
						android:id="@+id/end_date_button"
						android:layout_centerVertical="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/date_picker"
						android:minWidth="0dp"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintBottom_toBottomOf="parent"/>
				</android.support.constraint.ConstraintLayout>
			</LinearLayout>
		</LinearLayout>

		<android.support.v7.widget.AppCompatButton
			android:id="@+id/add_people_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/small_padding"
			android:layout_gravity="center"
			android:text="@string/select_friends"
			android:minWidth="0dp"/>

		<android.support.v7.widget.RecyclerView
			android:id="@+id/meeting_peoplelist"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
	</LinearLayout>
</RelativeLayout>
